CSS styling selectors added
class selectors were added to elements
selectors used for styling the recipe1-page

--- a/recipes/Cheesy-Zucchini-Casserole.html
+++ b/recipes/Cheesy-Zucchini-Casserole.html
@@ -4,17 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Cheesy Zucchini Casserole</title>
+    <link rel="stylesheet" href="../css/style1.css">
 
 </head>
 
 <body>
-    <a href="../index.html">Index</a>
-    <h1>Cheesy Zucchini Casserole</h1>
+    <a href="../index.html">Index</a></div>
+    <h1 class="r1-heading">Cheesy Zucchini Casserole</h1>
 
-    <img src="https://www.allrecipes.com/thmb/_O8EieKCc8eom7XEcORWWWfxTQc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20867-cheesy-zucchini-casserole-mfs-2x3-142-c9a9bc6e259a44a583c790d5cc30f5cd.jpg"
-        alt="Cheesy Zucchini Casserole Image">
+    <div class="img1"><img src="https://www.allrecipes.com/thmb/_O8EieKCc8eom7XEcORWWWfxTQc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20867-cheesy-zucchini-casserole-mfs-2x3-142-c9a9bc6e259a44a583c790d5cc30f5cd.jpg"
+        alt="Cheesy Zucchini Casserole Image"></div>
 
-    <h2>Description:</h2>
+    <h2 class="desc">Description:</h2>
     <p>A Cheesy Zucchini Casserole is a savory and flavorful dish that utilizes fresh zucchini, often abundant during
         the summer months. It’s known for its comforting qualities and ability to be enjoyed as a main course or a
         delicious side dish.</p>
@@ -44,7 +45,7 @@
         bubbly and golden brown. Some recipes may suggest briefly cooking the zucchini and/or onions and garlic
         before baking to enhance the flavors.</p>
 
-    <h2>Ingredients:</h2>
+    <h2 class="ingr">Ingredients:</h2>
 
     <ul>
         <li>4 slices bread, cubed</li>
@@ -64,7 +65,7 @@
         <li>2 cups shredded Cheddar cheese</li>
     </ul>
 
-    <h2>Steps:</h2>
+    <h2 class="steps">Steps:</h2>
 
     <ol>
         <li>Gather all ingredients. Preheat the oven to 350 degrees F (175 degrees C).</li>
