Styling added to recipe2
similar styling as recipe1
style1 CSS stylesheet linked
class selectors added to the page to enable CSS

--- a/recipes/saag-paneer.html
+++ b/recipes/saag-paneer.html
@@ -4,16 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Saag Paneer</title>
+    <link rel="stylesheet" href="../css/style1.css">
 
 </head>
 
 <body>
     <a href="../index.html">Index</a>
-    <h1>Saag Paneer</h1>
-    <img
-        src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/8/2/0/ZA0304H_saag-paneer-spinach-with-indian-cheese_s4x3.jpg.rend.hgtvcom.1280.720.suffix/1488497807789.webp">
-
-    <h2>Description:</h2>
+    <h1 class="r1-heading">Saag Paneer</h1>
+    <div class="img1">
+        <img
+            src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/8/2/0/ZA0304H_saag-paneer-spinach-with-indian-cheese_s4x3.jpg.rend.hgtvcom.1280.720.suffix/1488497807789.webp">
+    </div>
+    <h2 class="desc">Description:</h2>
     <p>Saag paneer is a hearty and flavorful Indian dish consisting of soft paneer cheese cubes served in a creamy,
         spicy curry made primarily with leafy greens. The word "saag" refers to the leafy greens, and it can be made
         with a mix of greens like spinach, mustard greens, kale, fenugreek, and other varieties.</p>
@@ -27,7 +29,7 @@
         cumin, turmeric, and chili powder. Some recipes also incorporate cream or yogurt for a smoother, richer texture.
     </p>
 
-    <h2>Ingredients:</h2>
+    <h2 class="ingr">Ingredients:</h2>
 
     <ul>
         <li>1 teaspoon turmeric</li>
@@ -48,7 +50,7 @@
 
     </ul>
 
-    <h2>Steps:</h2>
+    <h2 class="steps">Steps:</h2>
 
     <ol>
         <li>In a large bowl, whisk together the turmeric, cayenne, 1 teaspoon salt and 3 tablespoons oil. Gently, drop
